# django-training

./: .env.example  LICENSE  README.md  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
albums/migrations/: 0001_initial.py  0002_song.py  0003_alter_song_audio_file.py  0004_alter_song_audio_file_alter_song_image_and_more.py
albums/tests/: test_views.py
artists/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_num_admin_approved.py  0003_rename_num_admin_approved_artist_count_admin_approved.py  0004_alter_artist_count_admin_approved.py  0005_alter_artist_count_admin_approved.py  0006_alter_artist_count_admin_approved.py  0007_remove_artist_count_admin_approved.py
artists/tests/: test_views.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_login.py  test_logout.py  test_register.py
musicplatform/: RESULTS.md  celery.py  settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
